# openai-langchain-cookbook

./: README.md
openai_langchain_cookbook/: main.py  pyproject.toml
openai_langchain_cookbook/assert/folder_data/java_project/src/com/qa/main/: HelloWorld.java
openai_langchain_cookbook/demo/: ask_basic_openai.py  ask_other_model_openai.py  load_folder.py  load_folder_by_agent.py  load_single_pdf.py
openai_langchain_cookbook/demo/db/: chroma.sqlite3
openai_langchain_cookbook/tools/: code_davinci_tool.py
openai_langchain_cookbook/utils/: asset_utils.py  chroma_utils.py
