[tool.poetry]
name = "openai-langchain-cookbook"
version = "0.1.0"
description = ""
authors = ["kirin <kirin.chen1001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.30.1"
langchain = "^0.1.20"
pymupdf = "^1.24.4"
python-dotenv = "^1.0.1"
chromadb = "^0.5.0"
langchain-openai = "^0.1.7"
numexpr = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
